# myClaude

./: .gitignore  README.md  pyproject.toml
.claude/: plan.md
Agent/ResearchAssistant/: __init__.py  main.py  prompts.py
Agent/chatBot_with_memory/: main.py
Agent/workflow/: main.py
core/: __init__.py  llm.py  memory.py  node.py
core/chat_memory/: MEMORY.md  session.jsonl
pdf/: extract_result.json  images_info.txt  transformer_zh_cn.txt
tools/: __init__.py  executor.py  guard.py  safety_policy.yaml  skill_loader.py
tools/builtins/: __init__.py  bash.py  edit.py  grep.py  latex_render.py  ls.py  paper_search.py  read.py  search.py  tool_def.py  write.py
tools/skills/hello/: SKILL.md
tools/skills/pdf-image-text-extractor/: README.en.md  README.md  SKILL.md  _meta.json
